--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,64 @@
-.App {
-  text-align: center;
+* {
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  padding: 30px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.createBoard,
+.board {
+  width: 300px;
+  border: 1px solid black;
+  padding: 20px;
+  border-radius: 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.boards {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.board {
+  margin-top: 10px;
+  margin-right: 10px;
+  transition: height 0.5s ease;
+  height: fit-content;
+  position: relative;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.plus {
+  position: absolute;
+  border: 1px solid black;
+  border-radius: 50%;
+  top: 20px;
+  right: 20px;
+  width: 20px;
+  height: 20px;
+  text-align: center;
+  cursor: pointer;
+}
+
+.input_hidden {
+  height: 0;
+  opacity: 0;
+  z-index: -1;
+}
+
+.input_visible {
+  opacity: 1;
+}
+
+.input_board {
+  transition: 0.2s;
+}
+
+.task:first-child {
+  margin-top: 5px;
+}
+
+.task {
+  padding: 10px;
+  border: 1px solid black;
+  border-radius: 5px;
+  margin-bottom: 5px;
 }
